<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saludo"
            android:gravity="center"
            android:textAlignment="center"/>
        <EditText
            android:id="@+id/NombreMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_margin="10dp"
            android:hint="@string/nombre"
            android:importantForAutofill="no"/>
        <EditText
            android:id="@+id/PassMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_margin="10dp"
            android:hint="@string/Password"
            android:importantForAutofill="no"/>
        <Button
            android:id="@+id/accesarMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/accesar"
            />
        <Button
            android:id="@+id/cerrarMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/cerrar"
            />
        <Button
            android:id="@+id/segundoActi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Nuevo"
            />


    </LinearLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>